<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PillBox</string>
    <string name="calendario">Calendar</string>
    <string name="medicacion_activa">Active medication</string>
    <string name="favoritos">Favorites</string>
    <string name="agenda">Diary</string>
    <string name="historial">History</string>
    <string name="hoy">Today</string>
    <string name="inicio">Start:</string>
    <string name="fin">End:</string>
    <string name="ficha_tecnica">Summary</string>
    <string name="prospecto">Leaflet</string>
    <string name="lunes">Monday</string>
    <string name="martes">Tuesday</string>
    <string name="miercoles">Wednesday</string>
    <string name="jueves">Thursday</string>
    <string name="viernes">Friday</string>
    <string name="sabado">Saturday</string>
    <string name="domingo">Sunday</string>
    <string name="añadir_medicamento">Add medicament</string>
    <string name="horario">Schedule</string>
    <string name="sin_meds_activos">It appears you have no active medications currently…</string>
    <string name="deshacer">Undo</string>
    <string name="borrar_ok">Medication disposed correctly</string>
    <string name="borrar_error">Could not remove medication</string>
    <string name="reinsertar_ok">Recovered medication</string>
    <string name="reinsertar_error">The medication could not be retrieved</string>
    <string name="borrar_fav_ok">Medication removed from favorites</string>
    <string name="añadir_fav_ok">Medication added to favorites</string>
    <string name="añadir_fav_error">Error adding to favorites. Check if it is not on the list</string>
    <string name="borrar_fav_error">Error deleting favorites</string>
    <string name="sin_meds_favoritos">It appears you have no favorite medications currently…</string>
    <string name="buscar">Search</string>
    <string name="nuevo_med">New medicament</string>
    <string name="codigo_nacional">National code:</string>
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="codigo_nacional_opcional">National drug code</string>
    <string name="nombre">Name (required)</string>
    <string name="codigo_nacional_ayuda">The national code is usually found on the back of the medication box in the following format \'123456.7\'. It is necessary to autofill some data and access the leaflet and summary</string>
    <string name="guardar_como_favorito">Save as favorite</string>
    <string name="abrir_url_error">The URL cannot be opened or it does not exist</string>
    <string name="codigo_nacional_no_encontrado">Could not find any medication with that code</string>
    <string name="sin_horario">You have not specified any schedule</string>
    <string name="sin_nombre">You must indicate a name for the medication</string>
    <string name="fecha_invalida">The end date is before the start date or before the current date</string>
    <string name="horario_invalido">Two or more entries in the schedule are the same</string>
    <string name="buscando">Searching…</string>
    <string name="añadir_activo_ok">Medication added correctly</string>
    <string name="añadir_activo_error">Could not add medication</string>
    <string name="guardar_agenda_ok">Description saved correctly</string>
    <string name="guardar_agenda_error">Error saving new description</string>
    <string name="añadir_med_favorito">Add Favorite Medication</string>
    <string name="añadir_med_activo">Add Active Medication</string>
    <string name="sin_url">Missing URL to open</string>
    <string name="marcar_ok">Correctly marked medication</string>
    <string name="marcar_error">Error marking medication</string>
    <string name="desmarcar_ok">Correctly unmarked medication</string>
    <string name="desmarcar_error">Error unchecking medication</string>
    <string name="sin_meds_en_dia">It seems that you have no medicine for this day…</string>
    <string name="enero">January</string>
    <string name="febrero">February</string>
    <string name="marzo">March</string>
    <string name="abril">April</string>
    <string name="mayo">May</string>
    <string name="junio">June</string>
    <string name="julio">July</string>
    <string name="agosto">August</string>
    <string name="septiembre">September</string>
    <string name="octubre">October</string>
    <string name="noviembre">November</string>
    <string name="diciembre">December</string>
    <string name="historial_vacio">History is empty</string>
    <string name="cerrar">Close</string>
    <string name="info_medicamento">Medication information</string>
    <string name="numero_registro">Registry number:</string>
    <string name="laboratorio">Laboratory:</string>
    <string name="principios_activos">Active principles:</string>
    <string name="dosis">Dose:</string>
    <string name="ver_en_web">See on the web</string>
    <string name="ajustes">Settings</string>
    <string name="notificaciones">Receive notifications</string>
    <string name="ajustes_guardados">Saved Settings</string>
    <string name="tienes_que_tomar">You have to take:</string>
    <string name="marcar_como_tomado">Mark as taken</string>
</resources>