<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: hardcode string -->
    <item
        android:id="@+id/usersFragment"
        android:icon="@drawable/account_circle_32dp"
        android:title="users"
        app:showAsAction="withText" />

    <item
        android:id="@+id/manageUsersFragment"
        android:icon="@drawable/account_circle_32dp"
        android:title="Manage users"
        app:showAsAction="withText" />

    <item
        android:id="@+id/addActiveMed"
        android:icon="@drawable/add_32dp"
        android:title="@string/añadir_medicamento"
        app:showAsAction="withText" />

    <item
        android:id="@+id/diaryFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/agenda"
        app:showAsAction="withText" />

    <item
        android:id="@+id/historyFragment"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/historial"
        app:showAsAction="withText" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/ajustes"
        app:showAsAction="withText" />

</menu>
